--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,14 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="content">
+    <app-root></app-root>
+    <div class="push"></div>
+  </div>
+  <!-- Sticky footer trick from https://css-tricks.com/couple-takes-sticky-footer/ -->
+  <footer class="footer">
+    Fan app made by Yichuan Philip Ma. Max & Ruby characters and concept originally created by Rosemary Wells. The Max
+    & Ruby cartoon series was originally produced by Nelvana Ltd.
+  </footer>
 </body>
 </html>
